// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Alert prop type is marked as required 1`] = `
<div
  className="alert alert-undefined"
/>
`;

exports[`Component: Alert renders an alert with a close-button 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    className="material-icons alert-close"
  >
    close
  </i>
</div>
`;

exports[`Component: Alert renders an alert with a heading 1`] = `
<div
  className="alert alert-test"
>
  <h3
    className="alert-heading"
  >
    test
  </h3>
</div>
`;

exports[`Component: Alert renders an alert with a link with href='#' when no linkHref prop is provided 1`] = `
<div
  className="alert alert-test"
>
  <p
    className="alert-text"
  >
    <a
      className="alert-link"
      href="#"
    >
      test
    </a>
  </p>
</div>
`;

exports[`Component: Alert renders an alert with a link with provided href 1`] = `
<div
  className="alert alert-test"
>
  <p
    className="alert-text"
  >
    <a
      className="alert-link"
      href="www.example.com"
    >
      test
    </a>
  </p>
</div>
`;

exports[`Component: Alert renders an alert with icon 1`] = `
<div
  className="alert alert-test alert-with-icon"
>
  

  <i
    className="material-icons alert-icon"
  >
    test
  </i>
</div>
`;

exports[`Component: Alert renders an alert with text 1`] = `
<div
  className="alert alert-test"
>
  <p
    className="alert-text"
  >
    test
  </p>
</div>
`;

exports[`Component: Alert renders an alert with the correct type recieved from its props 1`] = `
<div
  className="alert alert-test"
/>
`;

exports[`Component: Alert renders an alert without a close-button if no close prop is provided 1`] = `
<div
  className="alert alert-test"
/>
`;

exports[`Component: Alert renders an alert without a heading if no heading prop is provided 1`] = `
<div
  className="alert alert-test"
/>
`;

exports[`Component: Alert renders an alert without a link with provided href when no linkText prop is provided 1`] = `
<div
  className="alert alert-test"
/>
`;

exports[`Component: Alert renders an alert without an icon if no icon prop is provided 1`] = `
<div
  className="alert alert-test"
/>
`;

exports[`Component: Alert renders an alert without text if no text prop is provided 1`] = `
<div
  className="alert alert-test"
/>
`;
